Fix alignment.

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,21 +16,46 @@ body {
     overflow: hidden;
 }
 
-.modal {
+.backdrop {
     position: absolute;
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 120%;
+    width: 100%;
+    overflow: hidden;
+    z-index: 99;
+    background: gray;
+    background-size: cover;
+}
+.modal {
+    color: white;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     margin-top: 10vh;
     z-index: 100;
-    height: 90%;
+    height: 70%;
     width: 80%;
     background-color: black;
     border: 2px solid white;
+    overflow-x: hidden;
+}
+
+.modal-content {
+    display: flex;
+    flex-direction: column;
+    height: 90%;
+    width: 90%;
+    justify-content: center;
+    align-items: center;
+    padding: 0 50px;
 }
 
 .exterior {
     border: 5px solid black;
     border-radius: 5px;
-}
+}   
 
 #screen {
     background-color: black;
@@ -405,7 +430,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 5;
+    z-index: 200;
 }
 
 .shake {
